<resources>
    <string name="app_name">Pro Creator Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="ticket">Ticket</string>
    <string name="hall">Hall</string>
    <string name="voucher_deals">Voucher Deals</string>
    <string name="lihat_semua">Lihat Semua ></string>
    <string name="sedang_tayang">Sedang Tayang</string>
    <string name="tangerrange_selatan">Tangerrange Selatan</string>
    <string name="user_icon">user icon</string>
    <string name="klik_disini">Klik Disini</string>
    <string name="duration">Duration</string>
    <string name="p_g">P-G</string>
    <string name="director">Director</string>
    <string name="writter">Writter</string>
    <string name="production_house">PH</string>
    <string name="genre">Genre</string>
</resources>