<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/black">

    <ImageView
        android:id="@+id/iv_movie_cover"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:alpha="0.4"
        android:scaleType="fitXY"
        android:src="@drawable/user_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_movie_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-40dp"
        android:src="@drawable/image_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_movie_cover" />

    <TextView
        android:id="@+id/tv_movie_title"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Star Wars: The Last Jedi"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_movie_photo"
        app:layout_constraintTop_toBottomOf="@+id/iv_movie_cover" />

    <LinearLayout
        android:id="@+id/ll_movie_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_movie_photo"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title">

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_weight="1"
           >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:text="@string/director"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:text="@string/writter"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:text="@string/genre"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:text="@string/production_house"
               />
       </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/tv_director_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/director"
                />
            <TextView
                android:id="@+id/tv_writter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/writter"
                />
            <TextView
                android:id="@+id/tv_genre_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/genre"
                />
            <TextView
                android:id="@+id/tv_ph_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/production_house"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_movie_overview"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="fill"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_movie_photo">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/stroke_color"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/rating_movie"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:progress="4"
                    android:progressTint="@color/gold" />

                <TextView
                    android:id="@+id/tv_movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8.9/10"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/stroke_color"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration" />

                <TextView
                    android:id="@+id/tv_movie_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="152 Min"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="16dp"
            app:strokeColor="@color/stroke_color"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p_g"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_age_req"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="13+"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_ticket"
        android:text="Beli Tiket"
        app:background="@drawable/voucher_item_back_ground"
        app:backgroundTint="#867AD2"
        app:cornerRadius="10dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>